syntax = "proto3";

import 'pw_protobuf_protos/common.proto';

package chip.rpc;


enum EnergyMeasurementType {
  CUMMULATIVE = 0x00; // For all time
  EPHEMERAL   = 0x01; // Since boot
}

message ElecPowerMeasurementMsg {
  int64 current = 1;  // in milliamps (mA)
  int64 voltage = 2;  // in millivolts (mV)
  int64 power = 3;    // in milliwatts (mW)

  optional int64 frequency = 4; // in millihertz (mHz)
}

message ElecEnergyMeasurementMsg {
  EnergyMeasurementType type = 1; // Cummulative or Ephemeral (default)
  optional uint64 energy_imported = 2;  // mWh
  optional uint32 energy_imported_ts = 3;  // epoch-s
  optional uint64 energy_exported = 4;  // mWh
  optional uint32 energy_exported_ts = 5;  // epoch-s
}

service Elec {
  // Set functions will return OK if all supported fields are successfully applied, any
  // unsupported fields will be ignored.
  rpc SendPowerReading(ElecPowerMeasurementMsg) returns (pw.protobuf.Empty){}
  rpc SendEnergyReading(ElecEnergyMeasurementMsg) returns (pw.protobuf.Empty){}
}
